--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,11 @@ input {
   width: 200px;
 }
 
+
 button {
   padding: 8px 15px;
   cursor: pointer;
+  margin-left: 10px;
 }
 
 ul {
@@ -23,4 +25,7 @@ ul {
 li {
   margin-top: 10px;
   font-size: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
